Fix wrap carousel children

--- a/src/components/carousel/Carousel.pcss
+++ b/src/components/carousel/Carousel.pcss
@@ -15,6 +15,7 @@
   & > * {
     scroll-snap-align: center;
     display: inline-block;
+    white-space: normal;
   }
 }
 
